--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -26,16 +26,20 @@
     "@types/react-dom": "^17.0.9",
     "axios": "^0.24.0",
     "buffer": "^6.0.3",
+    "i18next": "^21.6.7",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-http-backend": "^1.3.2",
     "lodash": "^4.17.21",
     "markdown-to-jsx": "^7.1.6",
-    "plural-ru": "^2.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.3",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.0",
     "react-string-replace": "^0.4.4",
     "react-swipeable-views": "^0.14.0",
     "react-tsparticles": "^1.39.0",
+    "redux": "^4.1.2",
     "serve": "^13.0.2",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
