--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -1,7 +1,15 @@
 {
   "name": "@venibot/dashboard",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Kasefuchs/VeniBot-Dashboard.git"
+  },
   "author": "Kasefuchs",
-  "license": "MIT",
+  "license": "AGPL-3.0",
+  "bugs": {
+    "url": "https://github.com/Kasefuchs/VeniBot-Dashboard/issues"
+  },
+  "homepage": "https://github.com/Kasefuchs/VeniBot-Dashboard#readme",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,10 +28,6 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.9",
     "axios": "^0.24.0",
     "buffer": "^6.0.3",
     "i18next": "^21.6.7",
@@ -38,11 +42,10 @@
     "react-scripts": "5.0.0",
     "react-string-replace": "^0.4.4",
     "react-swipeable-views": "^0.14.0",
+    "react-transition-group": "^4.4.2",
     "react-tsparticles": "^1.39.0",
     "redux": "^4.1.2",
-    "serve": "^13.0.2",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "serve": "^13.0.2"
   },
   "scripts": {
     "start": "serve -s build",
@@ -72,6 +75,12 @@
     "@types/lodash": "^4.14.178",
     "@types/react-router-dom": "5.3.2",
     "@types/react-swipeable-views": "^0.13.1",
-    "@types/react-window": "^1.8.5"
+    "@types/react-transition-group": "^4.4.4",
+    "@types/react-window": "^1.8.5",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "@types/react": "^17.0.20",
+    "@types/react-dom": "^17.0.9",
+    "typescript": "^4.4.2"
   }
 }
