--- a/dashboard/.env.example
+++ b/dashboard/.env.example
@@ -1,5 +1,7 @@
 REACT_APP_API_URL="http://127.0.0.1:8080"
 REACT_APP_DOCS_URL=""
+REACT_APP_STATUS_URL=""
 REACT_APP_KARASIQ_URL=""
+REACT_APP_DONATE_URL="https://boosty.to/VeniBot"
 HOST=127.0.0.1
 GENERATE_SOURCEMAP=false
