--- a/packages/venibot_api/pubspec.yaml
+++ b/packages/venibot_api/pubspec.yaml
@@ -1,15 +1,7 @@
 name: venibot_api
 description: A sample command-line application.
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+publish_to: none
 
 environment:
-  sdk: ^3.0.6
-
-# Add regular dependencies here.
-dependencies:
-  # path: ^1.8.0
-
-dev_dependencies:
-  lints: ^2.0.0
-  test: ^1.21.0
+  sdk: '>=3.0.6 <4.0.0'
