--- a/packages/venibot_api/pubspec.yaml
+++ b/packages/venibot_api/pubspec.yaml
@@ -5,3 +5,17 @@ publish_to: none
 
 environment:
   sdk: '>=3.0.6 <4.0.0'
+
+dependencies:
+  freezed_annotation: ^2.4.1
+  get_it: ^7.6.0
+  json_annotation: ^4.8.1
+  shelf: ^1.4.1
+  shelf_plus: ^1.7.0
+  yaml: ^3.1.2
+  yaml_extension: ^1.0.2
+
+dev_dependencies:
+  freezed: ^2.4.1
+  json_serializable: ^6.7.1
+  build_runner: ^2.4.6
